hello-node-service-LB.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: hello-node-service-lb
  name: hello-node-service-lb
spec:
  ports:
  - port: 8080
  selector:
    name: hello-node
  type: LoadBalancer
