hello-node-service-NP.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: hello-node-service-np
  name: hello-node-service-np
spec:
  ports:
  - port: 8080
  selector:
    name: hello-node
  type: NodePort
