hello-node-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: hello-node-2
  name: hello-node-2
spec:
  ports:
  - port: 8080
  selector:
    name: hello-node
  type: NodePort
