hello-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: hello-node
  name: hello-node
spec:
  ports:
  - port: 8080
  selector:
    name: hello-node
  type: LoadBalancer
