hello-node-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-node-ingress
spec:
  backend:
    serviceName: hello-node-2
    servicePort: 8080
